[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Map_Parts/MP-35-Area_Way_Point_Moving.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

[node name="MP-35-Area_Way_Point_Moving" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.1, 0.1 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_MP35Area_Way_Point_Moving_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_MP35Area_Way_Point_Moving_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
